# seisconvert

./: .gitignore  Makefile  Makefile.am  README.md  configure.ac  filter.c  filter.h  fm.c  highpass.c  kum_segy.c  kum_segy.h  lowpass.c  make.lua  project.lua  segy.c  segy.h  test.c  wav.c  wav.h
doc/: .gitignore  Makefile  biquad_filter.3  biquad_filter_init.3  kumy2raw.md  kumy2seed.md  kumy2wav.md  libbcd.md  sdread.md  seisconvert.html  seisconvert.tex
specs/: .gitignore  kumy-file-format.tex  suggestions_Arne.tex
src/: Makefile  Makefile.am  cos.c  fm.c  highpass.c  kumy2raw.c  kumy2seed.c  kumy2wav.c  sdbackup.c  sdread.c  seedtest.c  test.c  wav2seed.c  wav_header.c  wav_test.c
src/bcd/: Makefile.am  bcd.h  bcd_mjd.c  bcd_parse.c
src/buffer/: buffer.c  buffer.h  number.h
src/cli/: Makefile.am  cli.c  cli.h
src/kumy/: kumy.c  kumy.h  kumy_file.c  kumy_file.h
src/number/: number.c
src/options/: Makefile.am  options.c  options.h
src/seed/: miniseed_file.c  miniseed_file.h  seed.c  seed.h
src/segy/: segy.c  segy.h
src/seisconvert/: Makefile  Makefile.am  buffer.c  buffer.h  byte.c  byte.h  kum_segy.c  kumy.c  kumy_file.c  kumy_file.h  number.c  number.h  seed.c  segy.c  segy.h  wav.c  wav.h  wav_file.c  wav_file.h
src/tai/: Makefile.am  caldate.h  caldate_fmjd.c  caldate_fmt.c  caldate_mjd.c  caldate_norm.c  caldate_scan.c  caldate_ster.c  caltime.h  caltime_fmt.c  caltime_scan.c  caltime_tai.c  caltime_utc.c  leapsecs_add.c  leapsecs_read.c  leapsecs_read.lua  leapsecs_sub.c  tai.h  tai_add.c  tai_gps.c  tai_now.c  tai_pack.c  tai_sub.c  tai_unpack.c  taia.h  taia_add.c  taia_fmtfrac.c  taia_half.c  taia_less.c  taia_now.c  taia_pack.c  taia_sub.c  taia_tai.c  taia_unpack.c
src/wav/: filter.c  filter.h  fm.h  wav.c  wav_file.c  wav_file.h
tests/: Makefile  sdread
