noinst_LTLIBRARIES = libseisconvert.la
libseisconvert_la_SOURCES = buffer.c buffer.h byte.c byte.h filter.c filter.h fm.c fm.h kumy.c kumy_file.c kumy_file.h kumy.h miniseed_file.c miniseed_file.h number.c number.h seed.c seed.h segy.c segy.h wav.c wav_file.c wav_file.h wav.h
libseisconvert_la_CFLAGS = -I$(top_srcdir)/src/tai
